[package]
name = "contracts-runtime"
version = "0.1.0"
authors = ["Tomasz Kopacki <tomasz@kopacki.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#erc_20 = { path = "../dependencies/packages/erc20", version = "0.1.0" }
#erc_1155 = { path = "../dependencies/packages/erc-1155", version = "0.1.1" }

erc_20 = { git = "https://github.com/tk-o/cargo-workspace-demo", version = "0.1.0" }
erc_1155 = { git = "https://github.com/tk-o/cargo-workspace-demo", version = "0.1.1" }
